methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:4: error: not found: value True
    case  True => avancer();baisseBrosse();leveBosse()
          ^SlugHunting:4: error: not found: value avancer
    case  True => avancer();baisseBrosse();leveBosse()
                  ^SlugHunting:4: error: not found: value leveBosse
    case  True => avancer();baisseBrosse();leveBosse()
                                           ^